@startuml

skinparam classAttributeIconSize 0
skinparam packageStyle rect

' ==================================
' Packages for Namespaces
' ==================================

package GameWindow {
    class GameWindowManager {
        - int game_window_width
        - int game_window_height
        - int frame_rate
        - string game_window_title
        - sf::Color window_color
        - sf::RenderWindow* game_window
        - sf::VideoMode video_mode
        + GameWindowManager()
        + ~GameWindowManager()
        + bool isGameWindowOpen() const
        + sf::RenderWindow* getGameWindow() const
        + update()
        + render()
    }
}

package Event {
    enum MouseButtonState {
        PRESSED
        HELD
        RELEASED
    }

    class EventPollingManager {
        - sf::Event game_event
        - sf::RenderWindow* game_window
        - MouseButtonState left_mouse_button_state
        - MouseButtonState right_mouse_button_state
        + EventPollingManager(sf::RenderWindow*)
        + ~EventPollingManager()
        + void processEvents()
        + void update()
        + bool pressedEscapeKey() const
        + bool pressedLeftMouseButton() const
        + bool pressedRightMouseButton() const
        + sf::Vector2i getMousePosition() const
    }
    EventPollingManager ..> MouseButtonState
}

package UI {
    class SplashScreenManager {
        - float logo_animation_duration
        - float elapsed_time
        - sf::RenderWindow* game_window
        - sf::Sprite logo_sprite
        + SplashScreenManager(sf::RenderWindow*)
        + ~SplashScreenManager()
        + void update()
        + void render()
        - sf::Vector2f getLogoPosition() const
    }

    class MainMenuManager {
        - sf::RenderWindow* game_window
        - sf::Sprite background_sprite
        - Button* play_button
        - Button* quit_button
        + MainMenuManager(sf::RenderWindow*)
        + ~MainMenuManager()
        + void update(Event.EventPollingManager&)
        + void render()
        - void show()
        - void checkForButtonClicks(Event.EventPollingManager&)
        - void playButtonCallback(UIElements.MouseButtonType)
        - void quitButtonCallback(UIElements.MouseButtonType)
        - sf::Vector2f getButtonPosition(float, float) const
    }

    class GameplayUI {
        - sf::Text mineText
        - sf::Text timeText
        - UIElements.Button* restartButton
        - Gameplay.GameplayManager* gameplay_manager
        + GameplayUI(Gameplay.GameplayManager*)
        + ~GameplayUI()
        + void update(int, int, Event.EventPollingManager&, sf::RenderWindow&)
        + void render(sf::RenderWindow&)
        - void initialize(Gameplay.GameplayManager*)
        - void RestartButtonCallback(UIElements.MouseButtonType)
    }
}

package UIElements {
    enum MouseButtonType {
        LEFT_MOUSE_BUTTON
        RIGHT_MOUSE_BUTTON
    }

    class Button {
        - sf::Sprite buttonSprite
        - std::function callback_function
        + Button(string, sf::Vector2f, float, float)
        + void setTextureRect(const sf::IntRect& rect)
        + void handleButtonInteractions(Event.EventPollingManager&, const sf::RenderWindow&)
        + void registerCallbackFunction(std::function)
        + void render(sf::RenderWindow&) const
    }
    Button ..> MouseButtonType
}

package Gameplay {
    enum CellState {
        HIDDEN, OPEN, FLAGGED
    }
    enum CellType {
        EMPTY, ONE, TWO, THREE, FOUR,
        FIVE, SIX, SEVEN, EIGHT, MINE
    }
    enum BoardState {
        FIRST_CELL, PLAYING, COMPLETED
    }
    enum GameResult {
        NONE, WON, LOST
    }

    class Cell {
        - CellState current_cell_state
        - CellType cell_type
        - sf::Vector2i position
        - UIElements.Button* cell_button
        - Board* board
        + Cell(sf::Vector2i, float, float, Board*)
        + ~Cell()
        + void update(Event.EventPollingManager&, sf::RenderWindow&)
        + void render(sf::RenderWindow&)
        + void open()
        + bool canOpenCell() const
        + void toggleFlag()
        + void reset()
        + CellState getCellState() const
        + void setCellState(CellState)
        + CellType getCellType() const
        + void setCellType(CellType)
        + sf::Vector2i getCellPosition() const
        - void cellButtonCallback(UIElements.MouseButtonType)
    }

    class Board {
        - {static} int numberOfRows
        - {static} int numberOfColumns
        - {static} int minesCount
        - int flaggedCells
        - BoardState boardState
        - Cell* cell[9][9]
        - GameplayManager* gameplay_manager
        + Board(GameplayManager*)
        + ~Board()
        + void update(Event.EventPollingManager&, sf::RenderWindow&)
        + void render(sf::RenderWindow&)
        + void onCellButtonClicked(sf::Vector2i, UIElements.MouseButtonType)
        + void reset()
        + bool areAllCellsOpen()
        + void flagAllMines()
        + int getRemainingMinesCount() const
        + BoardState getBoardState() const
        + void setBoardState(BoardState)
        - void initialize(GameplayManager*)
        - void initializeVariables(GameplayManager*)
        - void initializeBoardImage()
        - void createBoard()
        - void populateBoard(sf::Vector2i)
        - void populateMines(sf::Vector2i)
        - void populateCells()
        - int countMinesAround(sf::Vector2i) const
        - void openCell(sf::Vector2i)
        - void toggleFlag(sf::Vector2i)
        - void processCellType(sf::Vector2i)
        - void processEmptyCell(sf::Vector2i)
        - void processMineCell(sf::Vector2i)
        - void revealAllMines()
        - float getCellWidthInBoard() const
        - float getCellHeightInBoard() const
        - bool isValidCellPosition(sf::Vector2i) const
        - bool isInvalidMinePosition(sf::Vector2i, int, int) const
    }

    class GameplayManager {
        - float remaining_time
        - Board* board
        - UI.GameplayUI* gameplay_ui
        - GameResult game_result
        + GameplayManager()
        + ~GameplayManager()
        + void update(Event.EventPollingManager&, sf::RenderWindow&)
        + void render(sf::RenderWindow&)
        + void restartGame()
        + void setGameResult(GameResult)
        - void initialize()
        - void initializeVariables()
        - void initializeBackground()
        - void handleGameplay(Event.EventPollingManager&, sf::RenderWindow&)
        - void checkGameWin()
        - void processGameResult()
        - void updateRemainingTime()
        - void processTimeOver()
        - void gameWon()
        - void gameLost()
        - bool hasGameEnded() const
        - int getRemainingMinesCount() const
    }
}

package Sound {
    enum SoundType {
        BUTTON_CLICK, FLAG, EXPLOSION, GAME_WON
    }

    class SoundManager {
        + {static} void Initialize()
        + {static} void PlaySound(SoundType)
        + {static} void PlayBackgroundMusic()
    }
    SoundManager ..> SoundType
}

package Time {
    class TimeManager {
        - {static} float delta_time
        + {static} void initialize()
        + {static} void update()
        + {static} float getDeltaTime()
    }
}

' ==================================
' Central GameLoop
' ==================================

enum GameState {
    SPLASH_SCREEN, MAIN_MENU, GAMEPLAY, EXIT
}

class GameLoop {
    - {static} GameState current_state
    - sf::RenderWindow* game_window
    - GameWindow.GameWindowManager* window_manager
    - Event.EventPollingManager* event_manager
    - UI.SplashScreenManager* splash_screen_manager
    - UI.MainMenuManager* main_menu_manager
    - Gameplay.GameplayManager* gameplay_manager
    + GameLoop()
    + ~GameLoop()
    + void run()
    + {static} void setGameState(GameState)
}

' ==================================
' Relationships
' ==================================

GameLoop *-- GameWindow.GameWindowManager : Composes
GameLoop *-- Event.EventPollingManager : Composes
GameLoop *-- UI.SplashScreenManager : Composes
GameLoop *-- UI.MainMenuManager : Composes
GameLoop *-- Gameplay.GameplayManager : Composes
GameLoop ..> GameState : Uses
GameLoop ..> Sound.SoundManager : Uses
GameLoop ..> Time.TimeManager : Uses

UI.MainMenuManager *-- "2" UIElements.Button : Composes
UI.MainMenuManager ..> GameLoop : Notifies (Circular)

Gameplay.GameplayManager *-- Gameplay.Board : Composes
Gameplay.GameplayManager *-- UI.GameplayUI : Composes
Gameplay.GameplayManager ..> Gameplay.GameResult : Uses

Gameplay.Board *-- "9x9 " Gameplay.Cell : Composes
Gameplay.Board ..> Gameplay.BoardState : Uses
Gameplay.Board ..> UIElements.MouseButtonType : Uses
Gameplay.Board ..> Gameplay.GameplayManager : Notifies (Circular)

Gameplay.Cell *-- UIElements.Button : Composes
Gameplay.Cell ..> Gameplay.CellState : Uses
Gameplay.Cell ..> Gameplay.CellType : Uses
Gameplay.Cell ..> Gameplay.Board : Notifies (Circular)

UI.GameplayUI *-- UIElements.Button : Composes
UI.GameplayUI ..> UIElements.MouseButtonType : Uses
UI.GameplayUI ..> Gameplay.GameplayManager : Notifies (Circular)

UIElements.Button ..> Event.EventPollingManager : Uses

' Layout Helpers to force vertical hierarchy
Gameplay.GameplayManager -[hidden]down- Gameplay.Board
Gameplay.Board -[hidden]down- Gameplay.Cell

@enduml